# parsb

./: CMakeLists.txt  README.md  main.cpp
include/: SlashBurn.h  benchmark.h  bitmap.h  builder.h  command_line.h  generator.h  graph.h  platform_atomics.h  pvector.h  reader.h  timer.h  util.h  writer.h
src/: SlashBurn.cpp
